# quadrant

./: .gitignore  README.md  main.py  pyproject.toml
static/js/: script.js
templates/: index.html
