[project]
name = "quadrant"
version = "0.1.0"
description = "Seamless P2P platform for instant file sharing, real-time sync, and media streaming—no cloud required. Enables secure device-to-device transfers over LAN or the internet. Includes powerful networking features like server orchestration, VPN, firewall, and reverse proxy. Fast, private, and account-free for both personal and enterprise use. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
]
